--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <div class="lg:col-span-12 mt-8">
+            <div class="lg:col-span-12 mt-2">
                 <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
                     <section>
                         <h2 class="text-lg font-bold">AI 저녁 메뉴 추천기란?</h2>
@@ -157,7 +157,7 @@
                 </div>
             </div>
 
-            <div class="lg:col-span-12 mt-8">
+            <div class="lg:col-span-12 mt-2">
                 <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
                     <section>
                         <h2 class="text-lg font-bold">자주 묻는 질문 (Q&A)</h2>
@@ -169,7 +169,7 @@
                 </div>
             </div>
 
-            <div class="lg:col-span-12 mt-8">
+            <div class="lg:col-span-12 mt-2">
                 <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
                     <section>
                         <h2 class="text-lg font-bold">데이터 출처 및 기준</h2>
@@ -203,7 +203,7 @@
                 </div>
             </div>
 
-            <div class="lg:col-span-12 mt-8">
+            <div class="lg:col-span-12 mt-2">
                 <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
                     <div class="contact-section">
                         <h2 class="text-lg font-bold">저녁 메뉴 추천 제휴 문의</h2>
@@ -217,6 +217,7 @@
                 </div>
             </div>
         </div>
+        
 
 <footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
 <div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
@@ -232,6 +233,8 @@
 </div>
 </div>
 </footer>
+</main>
+
 
     <script>
 const generateBtn = document.getElementById('generate');
