--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -18,10 +18,10 @@
     <meta name="twitter:description" content="금융 시장의 심리를 알아보고 투자 결정에 참고하세요.">
     <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <!-- Styles from korea-sentiment.html -->
+    <!-- Styles from index.html -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
-    <!-- Tailwind CSS and Fonts from korea-sentiment.html -->
+    <!-- Tailwind CSS and Fonts from index.html -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&amp;display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -50,7 +50,7 @@
                 background: conic-gradient(from 180deg at 50% 100%, #f87171 0deg, #fbbf24 90deg, #3d84f5 180deg);
             }
         </style>
-    <!-- Google Analytics and Clarity scripts from korea-sentiment.html -->
+    <!-- Google Analytics and Clarity scripts from index.html -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -108,7 +108,7 @@
 </head>
 <body class="min-h-screen bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-200">
     <div id="root">
-<!-- Header from korea-sentiment.html, adjusted for sentiment.html -->
+<!-- Header from index.html, adjusted for sentiment.html -->
 <header class="sticky top-0 z-50 w-full border-b border-solid border-[#e7ecf4] dark:border-[#1e293b] bg-white/80 dark:bg-background-dark/80 backdrop-blur-md">
 <div class="mx-auto flex max-w-[1200px] items-center justify-between px-6 py-3">
 <div class="flex items-center gap-8">
@@ -119,11 +119,11 @@
 <h2 class="text-lg font-bold tracking-tight">미국 금융 시장 심리</h2>
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/korea-sentiment.html">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
-<a class="text-sm font-semibold text-primary" href="/sentiment.html">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/public/index.html">한국 금융시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/public/dinner.html">오늘 저녁 뭐 먹지?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/public/insect.html">곤충상 테스트</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/public/about-insect.html">곤충상이란?</a>
+<a class="text-sm font-semibold text-primary" href="/public/sentiment.html">미국 금융 시장 심리</a>
 </div>
 </div>
 <div class="flex items-center gap-4">
@@ -141,11 +141,11 @@
 </div>
 <div id="mobile-menu" class="md:hidden hidden bg-white/80 dark:bg-background-dark/80 backdrop-blur-md pb-4 border-b border-solid border-[#e7ecf4] dark:border-[#1e293b]">
 <nav class="flex flex-col items-center gap-4 py-2">
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/korea-sentiment.html">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">오늘 저녁 뭐 먹지?</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
-<a class="text-sm font-semibold text-primary" href="/sentiment.html">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/public/index.html">한국 금융시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/public/dinner.html">오늘 저녁 뭐 먹지?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/public/insect.html">곤충상 테스트</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/public/about-insect.html">곤충상이란?</a>
+<a class="text-sm font-semibold text-primary" href="/public/sentiment.html">미국 금융 시장 심리</a>
 </nav>
 </div>
 </header>
@@ -212,7 +212,7 @@
         </div>
 
 
-<!-- Footer from korea-sentiment.html, adjusted for sentiment.html -->
+<!-- Footer from index.html, adjusted for sentiment.html -->
 <footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
 <div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
 <div class="flex flex-col gap-2">
@@ -220,7 +220,7 @@
 <p class="max-w-md text-xs leading-relaxed">본 페이지에서 제공하는 금융 시장 심리 정보는 참고용이며, 어떠한 투자 조언으로도 해석될 수 없습니다.</p>
 </div>
 <div class="flex gap-4">
-<a href="/privacy.html" class="flex items-center gap-2 rounded-lg bg-[#e7ecf4] dark:bg-slate-800 px-4 py-2 text-sm font-bold text-[#0d131c] dark:text-white hover:opacity-80">
+<a href="/public/privacy.html" class="flex items-center gap-2 rounded-lg bg-[#e7ecf4] dark:bg-slate-800 px-4 py-2 text-sm font-bold text-[#0d131c] dark:text-white hover:opacity-80">
 <span class="material-symbols-outlined text-[18px]">policy</span>
                         개인정보처리방침
                     </a>
