--- a/public/gemini_adv.html
+++ b/public/gemini_adv.html
@@ -1,13 +1,15 @@
         <div class="p-8 bg-slate-900 text-white">
-            <h1 class="text-2xl md:text-3xl text-white font-bold mb-4">KOSPI 5084.85 돌파 장세 종합 보고서</h1>
+            <h1 class="text-2xl md:text-3xl text-white font-bold mb-4">KOSPI 5135.18 장세 종합 보고서</h1>
             <p class="text-slate-300 leading-relaxed text-lg">
-                지수가 5,000포인트를 돌파하다니 정말 역사적인 날을 지나고 계시네요! 코스피 5084라니, 투자자로서 정말 짜릿하면서도 한편으로는 "이거 진짜 괜찮은 건가?" 싶은 복합적인 마음이 드실 것 같아요. 보내주신 5가지 지표를 보니, 현재 시장은 '겉은 화려하지만 속은 매우 불안한 축제' 상태입니다. 친근하면서도 아주 냉철하게 분석해 드릴게요.
+                코스피 5,100선 돌파라니, 정말 유례없는 강세장이 이어지고 있네요! 어제보다 더 오른 5135.18이라니 투자자로서 기쁘기도 하겠지만, 지표들이 보내는 신호는 어제보다 훨씬 더 날카로워졌습니다. 
+특히 **5번 풋콜 비율 점수가 '0'**이 되었다는 점은 시장 분석가로서 매우 긴장하며 보게 되는 대목입니다. 친근하지만 아주 냉철하게, 오늘의 시장 상황을 짚어드릴게요.<br/>
+<span>업데이트: 2026. 01. 28. 오후 03:06</span>
             </p>
         </div>
 
         <div class="p-8 space-y-12">
             <section>
-                <h2 class="text-xl font-bold mb-6 text-slate-900 border-l-4 border-slate-900 pl-4 dark:text-white">현재 시장 심리 스캔: 극단의 탐욕과 극단의 공포가 공존</h2>
+                <h2 class="text-xl font-bold mb-6 text-slate-900 border-l-4 border-slate-900 pl-4 dark:text-white">현 시장 심리 스캔: 폭주하는 기관차와 사라진 브레이크</h2>
                 <div class="overflow-x-auto">
                     <table class="w-full text-left border-collapse border-t border-slate-200">
                         <thead>
@@ -27,27 +29,27 @@
                             </tr>
                             <tr>
                                 <td class="p-5 font-bold text-slate-800 dark:text-white">2. RSI</td>
-                                <td class="p-5 text-red-600 font-bold">90.90</td>
+                                <td class="p-5 text-red-600 font-bold">91.54</td>
                                 <td class="p-5 font-semibold text-red-600">극심한 탐욕</td>
-                                <td class="p-5 text-slate-600 leading-relaxed text-sm dark:text-white">주가 상승 속도가 비정상적으로 빠릅니다. "묻지마 매수"가 들어오고 있다는 강력한 증거입니다.</td>
+                                <td class="p-5 text-slate-600 leading-relaxed text-sm dark:text-white">어제(90.90)보다 더 올랐습니다. 주가 상승 속도가 비정상적으로 빠르며, 과열권의 끝자락에 와 있습니다.</td>
                             </tr>
                             <tr>
                                 <td class="p-5 font-bold text-slate-800 dark:text-white">3. ADR</td>
                                 <td class="p-5 text-blue-600 font-bold">60.00</td>
                                 <td class="p-5 font-semibold text-blue-600">공포/소외</td>
-                                <td class="p-5 text-slate-600 leading-relaxed text-sm dark:text-white">중요! 지수는 2.7%나 폭등했는데, 상승 종목 수는 오히려 제한적입니다. 대형주 몇 개만 오르고 나머지는 하락하는 '쏠림'이 심각합니다.</td>
+                                <td class="p-5 text-slate-600 leading-relaxed text-sm dark:text-white">중요! 지수는 오르는데 상승 종목 수는 여전히 적습니다. 대형주 몇 개가 지수를 견인하는 '질 낮은 상승'이 지속되고 있습니다.</td>
                             </tr>
                             <tr>
                                 <td class="p-5 font-bold text-slate-800 dark:text-white">4. VKOSPI</td>
-                                <td class="p-5 text-blue-600 font-bold">18.83</td>
+                                <td class="p-5 text-blue-600 font-bold">17.30</td>
                                 <td class="p-5 font-semibold text-blue-600">공포</td>
-                                <td class="p-5 text-slate-600 leading-relaxed text-sm dark:text-white">변동성 지수가 높습니다(약 34%). 주가가 오르는데도 투자자들이 엄청난 불안감을 느끼고 있다는 뜻입니다.</td>
+                                <td class="p-5 text-slate-600 leading-relaxed text-sm dark:text-white">변동성 지수가 더 높아졌습니다. 주가가 오르는데도 시장 참여자들의 불안감은 어제보다 더 커졌음을 의미합니다.</td>
                             </tr>
                             <tr>
                                 <td class="p-5 font-bold text-slate-800 dark:text-white">5. 풋콜 비율</td>
-                                <td class="p-5 text-blue-800 font-bold">15.23</td>
+                                <td class="p-5 text-blue-800 font-bold">0</td>
                                 <td class="p-5 font-semibold text-blue-800">극심한 공포</td>
-                                <td class="p-5 text-slate-600 leading-relaxed text-sm dark:text-white">하락에 배팅하는 풋옵션 비중이 압도적입니다. 큰손들은 이미 "하락"에 보험을 빵빵하게 들어두었습니다.</td>
+                                <td class="p-5 text-slate-600 leading-relaxed text-sm dark:text-white">비상 상황! 스케일링 점수가 0점이라는 것은 PCR 값이 180%를 넘어섰다는 뜻입니다. 하락 베팅(풋옵션)이 시장을 완전히 장악했습니다.</td>
                             </tr>
                         </tbody>
                     </table>
@@ -55,37 +57,37 @@
             </section>
 
             <section class="space-y-6">
-                <h2 class="text-xl font-bold text-slate-900 border-l-4 border-slate-900 pl-4 dark:text-white">전문적인 종합 분석: 분노의 질주, 그런데 브레이크에 발을 올린...</h2>
+                <h2 class="text-xl font-bold text-slate-900 border-l-4 border-slate-900 pl-4 dark:text-white">전문적인 종합 분석: 붕괴를 대비하는 스마트 머니</h2>
                 <div class="bg-slate-50 p-6 rounded-lg space-y-4 text-slate-700">
-                    <p>현재 코스피 5,000 돌파 장세는 <strong>'과열(Blow-off Top)'</strong>의 징후를 다수 포함하고 있습니다.</p>
+                    <p>오늘의 장세는 전형적인 <strong>'라스트 스퍼트(Last Spurt)'</strong> 혹은 **'불 트랩(Bull Trap)'**의 위험을 내포하고 있습니다.</p>
                     <ul class="list-none space-y-4">
                         <li class="pl-4 border-l-2 border-slate-300">
-                            <strong>지수만 오르는 착시 (ADR 60):</strong> 지수가 2.7%나 올랐는데 ADR 점수가 60점이라는 것은, 시가총액 상위 몇몇 종목(삼성전자, SK하이닉스 등)이 지수를 억지로 끌어올리고 있다는 뜻입니다. 내 종목은 안 오르는데 지수만 가는 '박탈감 장세'일 확률이 높아요.
+                            <strong>풋콜 비율 0점의 공포:</strong> 지수가 오늘도 올랐음에도 풋콜 비율 점수가 0점이 나왔다는 것은, 기관과 외국인이 **"이제는 진짜 터질 때가 됐다"**고 판단하여 하락 베팅(풋옵션) 물량을 역사적 극단까지 채웠다는 뜻입니다. 지수는 웃고 있지만 파생 시장은 비명을 지르고 있는 형국입니다.
                         </li>
                         <li class="pl-4 border-l-2 border-slate-300">
-                            <strong>공포 섞인 상승 (PCR 15.23 & VKOSPI 18.83):</strong> 보통 지수가 이렇게 폭등하면 풋콜 비율이나 변동성 점수는 탐욕(80~100) 쪽으로 가야 합니다. 그런데 오히려 0점에 가깝다는 건, 파생 시장의 스마트 머니는 지금의 상승을 '가짜' 혹은 '곧 끝날 잔치'로 보고 하락에 엄청난 베팅을 쌓고 있다는 무서운 신호입니다.
+                            <strong>ADR과의 괴리 지속:</strong> 지수가 5,100을 넘겼음에도 ADR 점수가 60점에 머물고 있습니다. 이는 소외된 종목들이 속출하고 있다는 뜻이며, 대형주의 힘이 빠지는 순간 시장 전체가 급격히 무너질 수 있는 취약한 구조입니다.
                         </li>
                         <li class="pl-4 border-l-2 border-slate-300">
-                            <strong>기술적 한계치 (이격도 100 & RSI 90.9):</strong> 이건 "사고 싶어도 참아야 하는" 구간입니다. 여기서 더 오르더라도 그것은 '보유자의 영역'이지, 신규 진입자가 먹을 수 있는 수익 대비 리스크(손익비)가 최악인 상태예요.
+                            <strong>RSI 91.54의 경고:</strong> 기술적으로 RSI가 90을 넘어서는 구간은 '신의 영역'이라 부릅니다. 언제 급락이 나와도 이상하지 않은, 통계적으로 매우 희귀한 과열 상태입니다.
                         </li>
                     </ul>
                 </div>
             </section>
 
             <section class="bg-slate-900 text-white p-8 rounded-xl shadow-inner">
-                    <h2 class="text-xl font-bold mb-6 border-b border-slate-700 pb-2">세심한 조언: 수익은 챙기고, 도망칠 문 옆에 서 계세요</h2>
+                    <h2 class="text-xl font-bold mb-6 border-b border-slate-700 pb-2">세심한 조언: 지금은 수익에 취해 있을 때가 아니라, 언제든 짐을 싸서 나갈 준비를 해야 하는 시점입니다.</h2>
                     <div class="grid md:grid-cols-3 gap-6 text-sm text-slate-300">
                         <div>
-                            <h4 class="text-white font-bold mb-2">첫째, 신규 매수 금지</h4>
-                            <p class="text-white">RSI 90점대에서 추격 매수하는 것은 달리는 호랑이 등에 타는 격입니다. 지금은 현금을 아끼고 관망할 때입니다.</p>
+                            <h4 class="text-white font-bold mb-2">첫째, 현금화 비중을 급격히 높이세요.</h4>
+                            <p class="text-white">풋콜 비율 0점은 시장의 '보험' 수요가 폭발했다는 신호입니다. 여러분도 보험(현금)을 챙기셔야 합니다.</p>
                         </div>
                         <div>
-                            <h4 class="text-white font-bold mb-2">둘째, 익절가(Trailing Stop) 설정</h4>
-                            <p class="text-white">오늘 종가 기준으로 -3~5% 정도 하락하면 미련 없이 수익을 실현하세요. 풋콜 비율이 낮다는 건 급락의 경고입니다.</p>
+                            <h4 class="text-white font-bold mb-2">둘째, '절대 매도 기준'을 지키세요.</h4>
+                            <p class="text-white">오늘 종가 혹은 본인의 익절 라인을 1%라도 건드리면 미련 없이 던져야 합니다. 현재 지표상 하락이 시작되면 '투매'가 나올 가능성이 매우 높습니다.</p>
                         </div>
                         <div>
-                            <h4 class="text-white font-bold mb-2">셋째, 소외 종목 주목</h4>
-                            <p class="text-white">대형주가 쉴 때 오를 수 있는 탄탄한 중소형주를 찾거나, 현금 비중을 높여 폭풍우를 기다리는 것이 현명합니다.</p>
+                            <h4 class="text-white font-bold mb-2">셋째, 신규 진입은 독약입니다.</h4>
+                            <p class="text-white">지금 들어가는 것은 남들이 다 먹고 남은 설거지 거리를 떠안는 것과 같습니다. 지수가 5,200, 5,300을 가더라도 지금은 내 것이 아니라고 생각하시는 게 자산을 지키는 길입니다.</p>
                         </div>
                     </div>
                 </section>
