--- a/public/gemini_adv.html
+++ b/public/gemini_adv.html
@@ -3,7 +3,7 @@
             <p class="text-slate-300 leading-relaxed text-lg">
                 코스피 5,100선 돌파라니, 정말 유례없는 강세장이 이어지고 있네요! 어제보다 더 오른 5135.18이라니 투자자로서 기쁘기도 하겠지만, 지표들이 보내는 신호는 어제보다 훨씬 더 날카로워졌습니다. 
 특히 **5번 풋콜 비율 점수가 '0'**이 되었다는 점은 시장 분석가로서 매우 긴장하며 보게 되는 대목입니다. 친근하지만 아주 냉철하게, 오늘의 시장 상황을 짚어드릴게요.<br/>
-<span>업데이트: 2026. 01. 28. 오후 03:06</span>
+<span class="text-xs text-white/70 mt-2">업데이트: 2026. 01. 28. 오후 03:06</span>
             </p>
         </div>
 
