--- a/public/gemini_adv.html
+++ b/public/gemini_adv.html
@@ -14,9 +14,9 @@
                     <table class="w-full text-left border-collapse border-t border-slate-200">
                         <thead>
                             <tr class="bg-slate-50 text-slate-600 text-sm border-b border-slate-200">
-                                <th class="p-4 font-bold w-1/6">지표</th>
-                                <th class="p-4 font-bold w-1/12">점수</th>
-                                <th class="p-4 font-bold w-1/6">상태</th>
+                                <th class="p-4 font-bold">지표</th>
+                                <th class="p-4 font-bold">점수</th>
+                                <th class="p-4 font-bold">상태</th>
                                 <th class="p-4 font-bold">분석 내용</th>
                             </tr>
                         </thead>
