--- a/public/index.html
+++ b/public/index.html
@@ -109,14 +109,14 @@
 </div>
 <div class="flex items-center gap-4">
 <button id="menu-button" class="flex md:hidden h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
-<span class="material-symbols-outlined">menu</span>
+<span class="material-symbols-outlined dark:text-white">menu</span>
 </button>
 
 <button id="theme-switcher" class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
-<span class="material-symbols-outlined">light_mode</span>
+<span class="material-symbols-outlined dark:text-white">light_mode</span>
 </button>
 <button class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
-<span class="material-symbols-outlined">notifications</span>
+<span class="material-symbols-outlined dark:text-white">notifications</span>
 </button>
 <div class="h-10 w-10 rounded-full bg-cover bg-center ring-2 ring-primary/20" data-alt="User profile avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBneBh9BK99BKx2b26Ln0wWAXSWA-NkKD-lrrv98lVK_rJdPXTgQuGmdvqczD3UIKISPcMnzpf-BQOdedWBnyulZOQc1ciJwX7DT6PMhaFrVawJq4F6y18XmDN29W32bH_6CzaUWabwqtdTvTlUIGfSvw74jtRHl327xyGMcu_5I55ABKEDpKDaOoVeIFo8NUFPEGK3dONKg3bls3I7AJT26lh-N-OCbGYRo4N6cdwNSvECRXQfW82pZjHea9vnYNYvU8yp9ZTwnIf')"></div>
 </div>
@@ -200,7 +200,7 @@
 
 
 <div id="index-history-container" class="h-64 w-full relative"> <!-- Added ID and relative for absolute positioning -->
-    <div id="chart-placeholder" class="absolute inset-0 flex items-center justify-center text-lg font-bold text-[#49699c]" style="border:1px solid rgb(0, 255, 55)">
+    <div id="chart-placeholder" class="absolute inset-0 flex items-center justify-center text-lg font-bold text-[#49699c]">
         Preparing data...
     </div>
     <div id="index-history-chart" class="h-full w-full" style="display: none;"> <!-- Added ID and initially hidden -->
